# fashion-paradise

./: .releaserc.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: release.yml
.husky/: pre-commit
backend/: __init__.py
backend/app/: __init__.py
backend/app/auth/: __init__.py  routes.py  services.py
backend/app/auth/schemas/: requests.py
backend/common/schemas/: __init__.py  db.py  responses.py
backend/core/: .env.example  config.py  database.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
scripts/: sync_version.py
